all elements visible again, z-index issue due to absolute position of grid

--- a/src/components/Bar/Bar.module.css
+++ b/src/components/Bar/Bar.module.css
@@ -1,9 +1,14 @@
 .container {
   display: grid;
   width: 100%;
-  grid-template-columns: repeat(12, var(--grid-columns-width));
+  grid-template-columns: repeat(12, var(--grid-column-width));
 }
 
-.bgtop {
+.imageContainer {
   grid-column: 1 / 9;
+}
+
+.imageDark {
+  display: block;
+  width: 100%;
 }
